@@ -1,4 +1,5 @@
 v0.07.2
+* Added bezier patch meshes to parser
 * Added normal smoothing to FileMesh
 * Implemented BVH2 case properly in BoundingIntervalHierarchy (needs benchmarking)
 * Added binary STL format to FileMesh
